force-app/main/default/objects/ArchivedEmail__b/ArchivedEmail__b.object-meta.xml
<CustomObject>
    <description>Información archivada de email</description>
    <label>Email archivado</label>
    <pluralLabel>Emails archivados</pluralLabel>
</CustomObject>