force-app/main/default/objects/ArchivedEmail__b/fields/AccountOrLeadId__c.field-meta.xml
<CustomField>
    <fullName>AccountOrLeadId__c</fullName>
    <description>Id de la cuenta o candidato asociado</description>
    <label>Cuenta o Candidato</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>