force-app/main/default/objects/ArchivedEmail__b/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <description>Id del caso original</description>
    <label>Caso</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>