force-app/main/default/objects/ArchivedEmail__b/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <description>Id del contacto original</description>
    <label>Contacto</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>