force-app/main/default/objects/ArchivedEmail__b/fields/FromAddress__c.field-meta.xml
<CustomField>
    <fullName>FromAddress__c</fullName>
    <description>Remitente del email original</description>
    <label>Remitente</label>
    <type>Email</type>
</CustomField>