force-app/main/default/objects/ArchivedEmail__b/fields/FromName__c.field-meta.xml
<CustomField>
    <fullName>FromName__c</fullName>
    <description>Remitente del email original</description>
    <label>Nombre del remitente</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>