force-app/main/default/objects/ArchivedEmail__b/fields/HasAttachment__c.field-meta.xml
<CustomField>
    <fullName>HasAttachment__c</fullName>
    <description>Indica si tiene archivos adjuntos</description>
    <label>Tiene Adjunto</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>