force-app/main/default/objects/ArchivedEmail__b/fields/HTMLBody__c.field-meta.xml
<CustomField>
    <fullName>HTMLBody__c</fullName>
    <description>Cuerpo del email en formato HTML</description>
    <label>Cuerpo HTML del email</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>