force-app/main/default/objects/ArchivedEmail__b/fields/IsOpened__c.field-meta.xml
<CustomField>
    <fullName>IsOpened__c</fullName>
    <description>Indica si el email ha sido abierto en el momento del archivado</description>
    <label>Ha sido abierto</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>