force-app/main/default/objects/ArchivedEmail__b/fields/MessageDate__c.field-meta.xml
<CustomField>
    <fullName>MessageDate__c</fullName>
    <description>Fecha de envío del Email Message original</description>
    <label>Fecha de envío</label>
    <type>DateTime</type>
</CustomField>