force-app/main/default/objects/ArchivedEmail__b/fields/OriginEmailId__c.field-meta.xml
<CustomField>
    <fullName>OriginEmailId__c</fullName>
    <description>Id del Email Message original</description>
    <label>Id Email Original</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>