force-app/main/default/objects/ArchivedEmail__b/fields/PreviousEmailId__c.field-meta.xml
<CustomField>
    <fullName>PreviousEmailId__c</fullName>
    <description>Id del Email Message original al que responde</description>
    <label>Email anterior</label>
    <length>18</length>
    <type>Text</type>
</CustomField>