force-app/main/default/objects/ArchivedEmail__b/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Estado del email en el momento del archivado</description>
    <label>Estado</label>
    <length>18</length>
    <type>Text</type>
</CustomField>