force-app/main/default/objects/ArchivedEmail__b/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Asunto del Email Message original</description>
    <label>Asunto</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>