force-app/main/default/objects/ArchivedEmail__b/fields/TextBody__c.field-meta.xml
<CustomField>
    <fullName>TextBody__c</fullName>
    <description>Cuerpo del email en texto plano</description>
    <label>Cuerpo del email</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>