force-app/main/default/objects/ArchivedEmail__b/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <description>Destinatarios del email</description>
    <label>Destinatario</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>