force-app/main/default/objects/ArchivedEmail__b/fields/ToAddressBCC__c.field-meta.xml
<CustomField>
    <fullName>ToAddressBCC__c</fullName>
    <description>Destinatario (BCC) del email</description>
    <label>Destinatario (BCC)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>