force-app/main/default/objects/ArchivedEmail__b/fields/ToAddressCC__c.field-meta.xml
<CustomField>
    <fullName>ToAddressCC__c</fullName>
    <description>Destinatario (CC) del email</description>
    <label>Destinatario (CC)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>