force-app/main/default/objects/ArchivedEmail__b/fields/ValidatedFromAddress__c.field-meta.xml
<CustomField>
    <fullName>ValidatedFromAddress__c</fullName>
    <description>Remitente validado del email Message original</description>
    <label>Remitente validado</label>
    <type>Email</type>
</CustomField>